--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <form class="contact-form" action="send-mail.php" method="post">
                 <div class="clearfix">
-                    <label for="name">&nbsp;</label>
-                    <p class="status">Message goes Here</p>
+                    <label>&nbsp;</label>
+                    <p class="status">Today I ate some cake</p>
                 </div>
                 <div class="clearfix">
                     <label for="name">Name:</label>
